--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "inertiajs/inertia-laravel": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "league/flysystem-aws-s3-v3": "^3.0",
         "pxlrbt/filament-environment-indicator": "^2.1",
         "pxlrbt/filament-spotlight": "^1.3",
         "squirephp/countries-en": "^3.9",
