--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
         run: cp .env.test .env
 
       - name: Install Composer dependencies
-        run: composer install --no-interaction --prefer-dist --optimize-autoloader
+        run: composer install --no-interaction --optimize-autoloader
 
       - name: Cache NPM dependencies
         uses: actions/cache@v4
@@ -52,6 +52,9 @@ jobs:
 
       - name: Install NPM dependencies
         run: npm ci
+
+      - name: List Inertia page components
+        run: ls -lR resources/js/pages
 
       - name: Build assets
         run: npm run build
